gateway/higress/ai-plugins/04-skywalking.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: op-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skywalking-oap-server
  namespace: op-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skywalking-oap-server
  template:
    metadata:
      labels:
        app: skywalking-oap-server
    spec:
      containers:
        - name: skywalking-oap-server
          image: apache/skywalking-oap-server:9.3.0
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skywalking-oap-dashboard
  namespace: op-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skywalking-oap-dashboard
  template:
    metadata:
      labels:
        app: skywalking-oap-dashboard
    spec:
      containers:
        - name: skywalking-oap-dashboard
          image: apache/skywalking-ui:9.3.0
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: skywalking-oap-server
  namespace: op-system
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: skywalking-oap-server
  ports:
    - port: 12800
      name: rest
      targetPort: 12800
    - port: 11800
      name: grpc
      targetPort: 11800
---
apiVersion: v1
kind: Service
metadata:
  name: skywalking-oap-dashboard
  namespace: op-system
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: skywalking-oap-dashboard
  ports:
    - port: 8080
      name: http
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/destination: skywalking-oap-dashboard.op-system.svc.cluster.local:8080
    higress.io/ignore-path-case: "false"
  labels:
    higress.io/domain_skywalking.higress.io: "true"
    higress.io/resource-definer: higress
  name: skywalking-dashboard
  namespace: higress-system
spec:
  ingressClassName: higress
  rules:
    - host: skywalking.higress.io
      http:
        paths:
          - backend:
              resource:
                apiGroup: networking.higress.io
                kind: McpBridge
                name: default
            path: /
            pathType: Prefix
